--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,22 +2,28 @@
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
-  background: #fff;
+  background: transparent;
+  border: 2px solid white;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
+  border-radius: 12px;
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: fadeInUp 1s ease-out forwards;
+  box-shadow: 0 12px 30px rgba(0, 123, 255, 0.4);
+  box-shadow: 0 -12px 30px rgba(0, 123, 255, 0.4);
 }
 
 .container h1 {
   text-align: center;
   font-size: 28px;
   margin-bottom: 10px;
-  color: #203129;
+  color: #ffffff;
 }
 
 .container p {
   text-align: center;
-  color: #203129;
+  color: #ffffff;
   margin-bottom: 25px;
 }
 
@@ -30,7 +36,7 @@ form {
 form label {
   font-weight: bold;
   margin-bottom: 5px;
-  color: #203129;
+  color: #ffffff;
 }
 
 form input,
@@ -45,7 +51,7 @@ form textarea {
 
 form input:focus,
 form textarea:focus {
-  border-color: #588157;
+  border-color: #0466c8;
 }
 
 form textarea {
@@ -56,7 +62,7 @@ form textarea {
 form button {
   padding: 12px;
   border: none;
-  background: #588157;
+  background: #0466c8;
   color: #fff;
   font-size: 16px;
   font-weight: bold;
@@ -76,7 +82,7 @@ form button {
 }
 
 .social-links a {
-  color: #333; 
+  color: #0466c8; 
   transition: color 0.3s;
 }
 
