--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,15 +1,19 @@
 .experience-section {
   padding: 50px;
-  background: black;
+  background: #0a1c28;
   font-family: 'Arial', sans-serif;
 }
 
 .section-title {
-   font-size: 28px;
+  font-size: 2rem;
   margin-bottom: 30px;
-  font-weight: bold;
-  color: #588157;
+  font-weight: 900;
+  color: #0466c8;
   text-align: center;
+  font-family: "Montserrat",sans-serif;
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: fadeInUp 1s ease-out forwards;
 }
 
 .experience-container {
@@ -20,12 +24,17 @@
 }
 
 .experience-column {
-  background: #fff;
+  background: transparent;
+  border: 2px solid white;
   padding: 20px;
   border-radius: 12px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 12px 30px rgba(0, 123, 255, 0.4);
+  box-shadow: 0 -12px 30px rgba(0, 123, 255, 0.4);
   min-width: 300px;
   flex: 1;
+  opacity: 0;
+  transform: translateX(-30px);
+  animation: fadeInUp 1s ease-out forwards;
 }
 
 .experience-card {
@@ -39,13 +48,13 @@
   left: 0;
   top: 0;
   font-size: 1.5rem;
-  color: #ff4d5a;
+  color: white;
 }
 
 .timeline-year {
   display: block;
   font-size: 0.9rem;
-  color: gray;
+  color: #edede9;
   margin-bottom: 0;
 }
 
@@ -53,11 +62,12 @@
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 0;
+  color: #ffffff;
 }
 
 .experience-desc {
   font-size: 0.95rem;
-  color: #555;
+  color: #fefae0;
   margin-bottom: 0 !important;
 }
 
@@ -69,7 +79,7 @@
   top: 25px;
   height: calc(100% - 25px);
   width: 2px;
-  background: #ff4d5a;
+  background: white;
 }
 
 .experience-desc {
