--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color:#203129; 
+  background-color:#0a0e23; 
   padding: 0 20px;
 }
 
@@ -11,7 +11,7 @@
 }
 
 .navbar .nav-link {
-  color: #588157;
+  color: #cccccc;
   margin: 0 10px;
   font-size: 1.2rem;
   font-weight: 500;
@@ -29,13 +29,13 @@
 }
 .navbar .nav-link:hover {
   color: #fff;
-  border-bottom: 2px solid #588157;
+  border-bottom: 2px solid #4a4e69;
 }
 
 .navbar .nav-link.active {
-  color: #fff;
+  color: #0466c8;
   font-weight: bold;
-  border-bottom: 2px solid #588157;
+  border-bottom: 2px solid #0466c8;
 }
 
 .navbar-toggler {
