--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,10 +6,13 @@
   padding: 20px;
 }
 
-.aboutMe {
+.Aboutme {
+  width: 350px;
   max-width: 100%;
   height: auto;
   border-radius: 12px;
+  box-shadow: 0 12px 30px rgba(0, 123, 255, 0.4);
+  box-shadow: 0 -12px 30px rgba(0, 123, 255, 0.4);
 }
 
 .ColumnContent {
@@ -19,8 +22,8 @@
 }
 
 .strong-text {
-  font-weight: bold; 
-  color: #0466c8;     
+  font-weight: bold;
+  color: #0466c8;
 }
 
 .ColumnContent .FrontEnd {
@@ -31,8 +34,7 @@
   color: #dad7cd;
 }
 
-
-.ColumnContent .FrontEnd li{
+.ColumnContent .FrontEnd li {
   font-size: 1rem;
   font-weight: bold;
   margin: 10px 0;
@@ -40,34 +42,57 @@
   color: #dad7cd;
   opacity: 0;
   transform: translateY(-30px);
-  animation: fadeInUp 1s ease-out forwards;  
-
-  
+  animation: fadeInUp 1s ease-out forwards;
 }
+
 .ColumnContent .AboutHeading {
   font-size: 2rem;
   font-weight: bold;
   margin: 10px 0;
   text-align: left;
   color: #0466c8;
-  font-family: "Montserrat",sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .ColumnContent .name,
 .ColumnContent .age,
 .ColumnContent .address,
 .ColumnContent .email,
-.ColumnContent .contact{
-  font-size: rem;
+.ColumnContent .contact {
+  font-size: 1rem;
   font-weight: 600;
   margin: 10px 0;
   color: #ffffff;
- text-align: left;
+  text-align: left;
+  font-family: "Open Sans", sans-serif;
 }
-/* ===== Responsive ===== */
-@media (max-width: 992px) {
-  .ColumnContent, 
+
+@media (min-width: 767px) and (max-width: 991px) {
+  .ColumnContent,
   .ColumnImage {
-    flex: 100%; 
+    flex: 1 1;
     text-align: center;
+    padding: 5px;
+  }
+  .Aboutme {
+    width: 300px;
+    max-width: 100%;
+    height: auto;
+  }
+  .ColumnContent .AboutHeading {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 10px 0;
+    text-align: left;
+    color: #0466c8;
+    font-family: "Montserrat", sans-serif;
+  }
+}
+
+@media (max-width: 767px) {
+  .ColumnContent,
+  .ColumnImage {
+    flex: 100%;
+    text-align: center;
+    padding: 5px;
   }
 }
