--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 400px;
-  margin: 50px auto;
+  margin: 190px auto;
   padding: 20px;
   background: transparent;
   border: 2px solid white;
@@ -70,8 +70,8 @@ form button {
   cursor: pointer;
 }
 
-.contact-info p{
-    margin-top: 20px;
+.contact-info p {
+  margin-top: 20px;
 }
 
 .social-links {
@@ -82,21 +82,21 @@ form button {
 }
 
 .social-links a {
-  color: #0466c8; 
+  color: #0466c8;
   transition: color 0.3s;
 }
 
 .social-links a:hover {
-  color: #0077b5; 
+  color: #0077b5;
 }
 
 .social-links a:first-child:hover {
-  color: #333; 
+  color: #333;
 }
 
 .spinner {
-  border: 4px solid rgba(255, 255, 255, 0.3); 
-  border-top: 4px solid #0466c8;              
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #0466c8;
   border-radius: 50%;
   width: 30px;
   height: 30px;
@@ -105,8 +105,12 @@ form button {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .popup {
@@ -121,7 +125,6 @@ form button {
   align-items: center;
   z-index: 3000;
 }
-
 
 .popup-content button {
   margin-top: 12px;
@@ -142,16 +145,28 @@ form button {
   animation: scaleIn 0.3s ease-in-out;
 }
 
-.popup-content p{
+.popup-content p {
   color: black;
 }
 
 @keyframes scaleIn {
-  from { transform: scale(0.8); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
-@media (max-width:499px) {
-  .container{
+@media (max-width: 499px) {
+  .container {
     margin: 0 5px 0 5px !important;
+  }
+}
+
+@media (max-width: 599px) {
+  .contact-container {
+    margin: 5px;
   }
 }
