--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,12 +4,15 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.row {
+.homeRow {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   padding: 40px 20px;
+  max-width: 1200px;
+  margin: 135px auto;
+  padding: 0 20px;
 }
 
 .ColumnContent h3 {
